2022-11-18T08:23:44Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3495310989 # 239
* notice: last 14d: unq all: 1 9
* notice: prev accum: outdated-unq outdated-all / unq all: 87 242 / 92 250
* notice: next accum: outdated-unq outdated-all / unq all: 87 242 / 93 251
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-11-18]

2022-11-17T16:27:10Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3490098940 # 237
* notice: last 14d: unq all: 1 8
* notice: prev accum: outdated-unq outdated-all / unq all: 87 242 / 92 249
* notice: next accum: outdated-unq outdated-all / unq all: 87 242 / 92 250
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-11-17]

2022-11-17T08:26:29Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3486564888 # 236
* notice: last 14d: unq all: 1 7
* notice: prev accum: outdated-unq outdated-all / unq all: 87 242 / 91 248
* notice: next accum: outdated-unq outdated-all / unq all: 87 242 / 92 249
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-11-17]

2022-11-16T16:26:45Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3481187714 # 234
* notice: last 14d: unq all: 1 6
* notice: prev accum: outdated-unq outdated-all / unq all: 86 240 / 91 246
* notice: next accum: outdated-unq outdated-all / unq all: 87 242 / 91 248
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2022-11-02] / [2022-11-16]

2022-11-16T08:27:19Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3477625756 # 233