@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-11-18T08:23:44Z",
+  "timestamp" : "2022-11-19T01:43:47Z",
   "count_outdated" : 242,
   "uniques_outdated" : 87,
-  "count" : 251,
+  "count" : 252,
   "uniques" : 93,
   "clones" : [
     {
@@ -42,8 +42,8 @@
     },
     {
       "timestamp": "2022-11-18T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
