@@ -1,5 +1,5 @@
 {
-  "count": 9,
+  "count": 10,
   "uniques": 1,
   "clones": [
     {
@@ -29,7 +29,7 @@
     },
     {
       "timestamp": "2022-11-18T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
